——————— february major sync ———————

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -3,7 +3,7 @@
 /*glx backend is faster*/
 
 backend = "glx";
-glx-use-copysubbuffer-mesa = true;
+/*glx-use-copysubbuffer-mesa = true;*/
 
 /*enable vsync, so there will be no more stutter or whatsoever*/
 
