--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,44 +1,28 @@
 # config
 
-background_opacity 0.9
+background_opacity 0.8
 font_family CaskaydiaCove NF 
 window_padding_width 15
 font_size 12
 
-foreground            #ebdbb2
-background            #171717
-selection_foreground  #655b53
-selection_background  #ebdbb2
-url_color             #d65c0d
-
-# black
-color0   #272727
-color8   #928373
-
-# red
-color1   #cc231c
-color9   #fb4833
-
-# green
-color2   #989719
-color10  #b8ba25
-
-# yellow
-color3   #d79920
-color11  #fabc2e
-
-# blue
-color4  #448488
-color12 #83a597
-
-# magenta
-color5   #b16185
-color13  #d3859a
-
-# cyan
-color6   #689d69
-color14  #8ec07b
-
-# white
-color7   #a89983
-color15  #ebdbb2
+background #090200
+foreground #a4a1a1
+cursor #a4a1a1
+selection_background #494542
+color0 #090200
+color8 #5b5754
+color1 #da2c20
+color9 #e8bacf
+color2 #00a152
+color10 #3a3332
+color3 #fcec02
+color11 #494542
+color4 #00a0e4
+color12 #7f7c7b
+color5 #a06994
+color13 #d6d4d3
+color6 #b5e4f4
+color14 #ccab53
+color7 #a4a1a1
+color15 #f7f7f7
+selection_foreground #090200
