--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,28 +1,9 @@
 # config
 
-background_opacity 0.8
+background_opacity 0.95
 font_family CaskaydiaCove NF 
-window_padding_width 15
-font_size 12
+window_padding_width 8
+font_size 14
 
-background #090200
-foreground #a4a1a1
-cursor #a4a1a1
-selection_background #494542
-color0 #090200
-color8 #5b5754
-color1 #da2c20
-color9 #e8bacf
-color2 #00a152
-color10 #3a3332
-color3 #fcec02
-color11 #494542
-color4 #00a0e4
-color12 #7f7c7b
-color5 #a06994
-color13 #d6d4d3
-color6 #b5e4f4
-color14 #ccab53
-color7 #a4a1a1
-color15 #f7f7f7
-selection_foreground #090200
+background #111111
+foreground #B3B1AD
