--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -2,7 +2,7 @@
 
 /*glx backend is faster*/
 
-backend = "glx";
+backend = "xr_glx_hybrid";
 /*glx-use-copysubbuffer-mesa = true;*/
 
 /*enable vsync, so there will be no more stutter or whatsoever*/
