--- a/config/polybar/config
+++ b/config/polybar/config
@@ -7,7 +7,7 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #dd090200
+background = #bb090200
 ;background-alt = #444
 ;foreground = ${xrdb:color7:#222}
 foreground = #a4a1a1
@@ -25,7 +25,7 @@ height = 24
 ;override-redirect = true
 ;radius = 5.0
 fixed-center = true
-;bottom = true
+bottom = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -45,14 +45,14 @@ module-margin-right = 1
 font-0 = "Scientifica:size=14:style=Bold;3"
 font-1 = "CaskaydiaCove NF:size=20;4"
 font-2 = "feather:size=16;4"
-font-3 = "unifont:fontformat=truetype:size=12:antialias=false;0"
+font-3 = "unifont:fontformat=truetype:size=14:antialias=false;3"
 font-4 = "Noto Sans CJK JP:size=12;2"
 
 modules-left = memory i3 xwindow
 modules-center = date 
 modules-right = wlan eth pulseaudio battery powermenu 
 
-tray-position = right
+tray-position = left
 tray-padding = 2
 
 ;wm-restack = generic
