——————— march major sync ———————
Signed-off-by: Raihan <17radf@gmail.com>

--- a/config/i3/config
+++ b/config/i3/config
@@ -3,6 +3,8 @@
 # ========= Initial ==========
 
 set $term kitty
+set $wpfolder ~/Pictures/Wallpapers
+set $wp ~/Pictures/Wallpapers/alone.jpg
 
 # mouse
 focus_follows_mouse no
@@ -11,7 +13,7 @@ exec_always --no-startup-id xinput set-prop 14 345 1
 
 # necessary apps
 exec_always --no-startup-id nitrogen --restore
-# exec_always --no-startup-id picom
+exec_always --no-startup-id picom
 exec --no-startup-id redshift -P -O 5500K
 exec --no-startup-id dunst
 exec --no-startup-id ~/.dotfiles/scripts/udiskie.sh
@@ -19,7 +21,7 @@ exec --no-startup-id ~/.dotfiles/scripts/batteryCheck.sh
 # exec --no-startup-id nm-applet
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -i $wpfolder/pixel-space.jpg
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -i $wp
 # set $refresh_i3status killall -SIGUSR1 i3status
 
 # ========== Border / Gaps ==========
@@ -29,7 +31,7 @@ default_border pixel 3
 set $gaps 15
 #gaps inner $gaps
 gaps inner 10
-gaps outer 15
+gaps outer 5
 
 # Smart Thingy
 # smart_gaps on
@@ -89,10 +91,9 @@ bindsym Print exec --no-startup-id flameshot full -p ~/Pictures/Screenshots
 bindsym $mod+u --release exec --no-startup-id flameshot gui -p ~/Pictures/Screenshots
 
 # Lock Screen
-bindsym $mod+shift+x exec --no-startup-id i3lock -i $wpfolder/pixel-space.jpg
+bindsym $mod+shift+x exec --no-startup-id i3lock -i $wp
 
 # Wallpaper
-set $wpfolder ~/Pictures/Wallpapers
 bindsym $mod+Shift+semicolon exec --no-startup-id nitrogen $wpfolder || notify-send "Theres no 'Wallpapers' folder in Pictures"
 
 # Kill some fuckers
