--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -2,8 +2,8 @@
 
 /*glx backend is faster*/
 
-backend = "xr_glx_hybrid";
-/*glx-use-copysubbuffer-mesa = true;*/
+backend = "glx";
+glx-use-copysubbuffer-mesa = true;
 
 /*enable vsync, so there will be no more stutter or whatsoever*/
 
@@ -11,18 +11,18 @@ vsync = true;
 
 /*rounded corners*/
 /*corner-radius = 5.0;*/
-rounded-corners-exclude = [
-  "class_g =  'Polybar'"
-]
+/* rounded-corners-exclude = [ */
+/*   "class_g =  'Polybar'" */
+/* ] */
 
-/*starting from here, below are performance-hogging config*/
+/*starting from here are performance-hogging config*/
 
-/*shadow = true;*/
-/*shadow-radius = 13;*/
-/*shadow-offset-x = 3;*/
-/*shadow-offset-y = 3;*/
-/*shadow-opacity = 0.3;*/
-/*shadow-ignore-shaped = false;*/
+/* shadow = true; */
+/* shadow-radius = 13; */
+/* shadow-offset-x = 3; */
+/* shadow-offset-y = 3; */
+/* shadow-opacity = 0.3; */
+/* shadow-ignore-shaped = false; */
 
 /*inactive-opacity = 0.9;*/
 /*active-opacity = 1;*/
@@ -31,15 +31,8 @@ rounded-corners-exclude = [
 
 /*opacity-rule = [ "100:class_g = 'steam'" ];*/
 
-/*blur: {*/
-  /*method = "dual_kawase";*/
-  /*strength = 10;*/
-/*};*/
-
-/*fading = true;*/
-/*fade-in-step = 0.01;*/
-/*fade-out-step = 0.01;*/
-/*fade-delta = 1;*/
-/*no-fading-destroyed-argb = true;*/
-
-
+fading = true;
+fade-in-step = 0.01;
+fade-out-step = 0.01;
+fade-delta = 1;
+no-fading-destroyed-argb = true;
