--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -10,7 +10,7 @@ glx-use-copysubbuffer-mesa = true;
 vsync = true;
 
 /*rounded corners*/
-/*corner-radius = 5.0;*/
+corner-radius = 5.0;
 /* rounded-corners-exclude = [ */
 /*   "class_g =  'Polybar'" */
 /* ] */
