zsh: separate exports from zshrc file
Signed-off-by: Raihan <17radf@gmail.com>

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,6 +13,7 @@
     ~/.p10k.zsh: dots/p10k.zsh
     ~/.gitconfig: dots/gitconfig
     ~/.zsh_aliases: dots/zsh_aliases
+    ~/.zsh_exports: dots/zsh_exports
     ~/.tmux.conf: dots/tmux.conf
 
     # i3
