--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,11 +1,11 @@
 add_newline = false
 
 [line_break]
-disabled = false
+disabled = true
 
-[character]                            
+[character]
 # this is kinda edgy ig
-#success_symbol = "[](bold green)"    
+#success_symbol = "[](bold green)"
 #error_symbol = "[](bold red)"
 #vicmd_symbol = "[](bold blue)"
 
