--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -5,48 +5,73 @@ font_family Iosevka NF
 window_padding_width 8
 font_size 14
 
-background #111111
-foreground #B3B1AD
+# The basic colors
+foreground              #CDD6F4
+background              #05080a
+selection_foreground    #1E1E2E
+selection_background    #F5E0DC
 
-cursor                #928374
+# Cursor colors
+cursor                  #F5E0DC
+cursor_text_color       #1E1E2E
 
-selection_foreground  #928374
-selection_background  #3c3836
+# URL underline color when hovering with mouse
+url_color               #F5E0DC
 
-color0  #111111
-color8  #928374
+# Kitty window border colors
+active_border_color     #B4BEFE
+inactive_border_color   #6C7086
+bell_border_color       #F9E2AF
+
+# OS Window titlebar colors
+wayland_titlebar_color system
+macos_titlebar_color system
+
+# Tab bar colors
+active_tab_foreground   #11111B
+active_tab_background   #CBA6F7
+inactive_tab_foreground #CDD6F4
+inactive_tab_background #181825
+tab_bar_background      #11111B
+
+# Colors for marks (marked text in the terminal)
+mark1_foreground #1E1E2E
+mark1_background #B4BEFE
+mark2_foreground #1E1E2E
+mark2_background #CBA6F7
+mark3_foreground #1E1E2E
+mark3_background #74C7EC
+
+# The 16 terminal colors
+
+# black
+color0 #45475A
+color8 #585B70
 
 # red
-color1                #cc241d
-# light red
-color9                #fb4934
+color1 #F38BA8
+color9 #F38BA8
 
 # green
-color2                #98971a
-# light green
-color10               #b8bb26
+color2  #A6E3A1
+color10 #A6E3A1
 
 # yellow
-color3                #d79921
-# light yellow
-color11               #fabd2d
+color3  #F9E2AF
+color11 #F9E2AF
 
 # blue
-color4                #458588
-# light blue
-color12               #83a598
+color4  #89B4FA
+color12 #89B4FA
 
 # magenta
-color5                #b16286
-# light magenta
-color13               #d3869b
+color5  #F5C2E7
+color13 #F5C2E7
 
 # cyan
-color6                #689d6a
-# lighy cyan
-color14               #8ec07c
+color6  #94E2D5
+color14 #94E2D5
 
-# light gray
-color7                #a89984
-# dark gray
-color15               #928374
+# white
+color7  #BAC2DE
+color15 #A6ADC8
