feat: sync w/ latest and add force-kill keybind

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,77 +1,28 @@
 # config
 
 background_opacity 0.95
-font_family Iosevka NF 
-window_padding_width 8
+font_family JetBrains Mono NF
+window_padding_width 16
 font_size 14
 
-# The basic colors
-foreground              #CDD6F4
-background              #05080a
-selection_foreground    #1E1E2E
-selection_background    #F5E0DC
-
-# Cursor colors
-cursor                  #F5E0DC
-cursor_text_color       #1E1E2E
-
-# URL underline color when hovering with mouse
-url_color               #F5E0DC
-
-# Kitty window border colors
-active_border_color     #B4BEFE
-inactive_border_color   #6C7086
-bell_border_color       #F9E2AF
-
-# OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
-
-# Tab bar colors
-active_tab_foreground   #11111B
-active_tab_background   #CBA6F7
-inactive_tab_foreground #CDD6F4
-inactive_tab_background #181825
-tab_bar_background      #11111B
-
-# Colors for marks (marked text in the terminal)
-mark1_foreground #1E1E2E
-mark1_background #B4BEFE
-mark2_foreground #1E1E2E
-mark2_background #CBA6F7
-mark3_foreground #1E1E2E
-mark3_background #74C7EC
-
-# The 16 terminal colors
-
-# black
-color0 #45475A
-color8 #585B70
-
-# red
-color1 #F38BA8
-color9 #F38BA8
-
-# green
-color2  #A6E3A1
-color10 #A6E3A1
-
-# yellow
-color3  #F9E2AF
-color11 #F9E2AF
-
-# blue
-color4  #89B4FA
-color12 #89B4FA
-
-# magenta
-color5  #F5C2E7
-color13 #F5C2E7
-
-# cyan
-color6  #94E2D5
-color14 #94E2D5
-
-# white
-color7  #BAC2DE
-color15 #A6ADC8
+background #1e1e1e
+foreground #b8bcb9
+cursor #f83d19
+selection_background #292c31
+color0 #3a3c43
+color8 #888987
+color1 #be3e48
+color9 #fb001e
+color2 #869a3a
+color10 #0e712e
+color3 #c4a535
+color11 #c37033
+color4 #4e76a1
+color12 #176ce3
+color5 #855b8d
+color13 #fb0067
+color6 #568ea3
+color14 #2d6f6c
+color7 #b8bcb9
+color15 #fcffb8
+selection_foreground #1e1e1e
