refactor: sync with dpi

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,28 +1,66 @@
 # config
 
 background_opacity 0.95
-font_family JetBrains Mono NF
+font_family JetBrainsMono NF
 window_padding_width 16
 font_size 14
 
-background #1e1e1e
-foreground #b8bcb9
-cursor #f83d19
-selection_background #292c31
-color0 #3a3c43
-color8 #888987
-color1 #be3e48
-color9 #fb001e
-color2 #869a3a
-color10 #0e712e
-color3 #c4a535
-color11 #c37033
-color4 #4e76a1
-color12 #176ce3
-color5 #855b8d
-color13 #fb0067
-color6 #568ea3
-color14 #2d6f6c
-color7 #b8bcb9
-color15 #fcffb8
-selection_foreground #1e1e1e
+allow_remote_control yes
+listen_on 
+
+cursor                #23ff18
+
+foreground            #f8f8f2
+selection_foreground  #ffffff
+selection_background  #44475a
+
+url_color #8be9fd
+
+# black
+color8  #6272a4
+
+# red
+color1  #ff5555
+color9  #ff6e6e
+
+# green
+color2  #50fa7b
+color10 #69ff94
+
+# yellow
+color3  #f1fa8c
+color11 #ffffa5
+
+# blue
+color4  #bd93f9
+color12 #d6acff
+
+# magenta
+color5  #ff79c6
+color13 #ff92df
+
+# cyan
+color6  #8be9fd
+color14 #a4ffff
+
+# white
+color7  #f8f8f2
+color15 #ffffff
+
+# Cursor colors
+cursor            #f8f8f2
+cursor_text_color background
+
+# Tab bar colors
+active_tab_foreground   #282a36
+active_tab_background   #f8f8f2
+inactive_tab_foreground #282a36
+inactive_tab_background #6272a4
+
+# Marks
+mark1_foreground #282a36
+mark1_background #ff5555
+
+# Splits/Windows
+active_border_color #f8f8f2
+inactive_border_color #6272a4
