--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2,7 +2,7 @@
 
 background_opacity 0.95
 font_family JetBrainsMono NF
-window_padding_width 16
+window_padding_width 12
 font_size 14
 
 allow_remote_control yes
@@ -11,6 +11,7 @@ listen_on
 cursor                #23ff18
 
 foreground            #f8f8f2
+background            #121212
 selection_foreground  #ffffff
 selection_background  #44475a
 
