fix: everything(install.conf, autostart, zshalias, and nm-dmenu)

--- a/config/networkmanager-dmenu/config.ini
+++ b/config/networkmanager-dmenu/config.ini
@@ -1,5 +1,5 @@
 [dmenu]
-fn = SourceCodePro-11
+; fn = Iosevka-11
 #fn = -*-terminus-medium-*-*-*-16-*-*-*-*-*-*-*
 dmenu_command = rofi -no-config -no-lazy-grab -show drun -modi drun -theme ~/.config/rofi/networkmenu.rasi  
 # # Note that dmenu_command can contain arguments as well like `rofi -width 30`
