nvim: pre-lazy-loading commit

--- a/config/nvim/snippets/package.json
+++ b/config/nvim/snippets/package.json
@@ -39,6 +39,13 @@
 
       {
         "language": [
+          "bib"
+        ],
+        "path": "./bib.json"
+      },
+
+      {
+        "language": [
           "zsh"
         ],
         "path": "./zsh.json"
