nvim: add snippets for flutter (bloc&cubit)

--- a/config/nvim/snippets/package.json
+++ b/config/nvim/snippets/package.json
@@ -49,6 +49,13 @@
           "zsh"
         ],
         "path": "./zsh.json"
+      },
+
+      {
+        "language": [
+          "dart"
+        ],
+        "path": "./flutter.json"
       }
 
     ]
