sync: end of the year commit, bye-bye 2022

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,17 +1,16 @@
 # config
 
 background_opacity 0.95
-font_family JetBrainsMono NF
+font_family JetBrainsMono NF 
 window_padding_width 12
 font_size 14
 
 allow_remote_control yes
 listen_on 
 
-cursor                #23ff18
-
 foreground            #f8f8f2
 background            #121212
+color0                #121212
 selection_foreground  #ffffff
 selection_background  #44475a
 
@@ -47,10 +46,6 @@ color14 #a4ffff
 # white
 color7  #f8f8f2
 color15 #ffffff
-
-# Cursor colors
-cursor            #f8f8f2
-cursor_text_color background
 
 # Tab bar colors
 active_tab_foreground   #282a36
