sync: monthly push (may)

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # config
 
 background_opacity 0.98
-font_family JetBrainsMono NF 
+font_family Iosevka NF 
 window_padding_width 12
 font_size 12
 
