nvim: add auto-session and fix telescope & nvim-tree

--- a/config/nvim/lua/.luarc.json
+++ b/config/nvim/lua/.luarc.json
@@ -8,6 +8,7 @@
         "after_each",
         "setup",
         "teardown",
-        "open_nvim_tree"
+        "open_nvim_tree",
+        "Path"
     ]
 }
