--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # config
 
 background_opacity 0.98
-font_family Iosevka NF 
+font_family IosevkaTerm NF
 window_padding_width 12
-font_size 14
+font_size 16
 
 allow_remote_control yes
 listen_on 
