sync: monthly push (september)

--- a/dots/tmux.conf
+++ b/dots/tmux.conf
@@ -5,6 +5,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # change prefix
 set-option -g prefix C-Space
