nvim: nvm, i guess i was too "lazy"

--- a/config/nvim/lua/.luarc.json
+++ b/config/nvim/lua/.luarc.json
@@ -10,5 +10,8 @@
         "teardown",
         "open_nvim_tree",
         "Path"
+    ],
+    "diagnostics.disable": [
+        "missing-fields"
     ]
 }
