sync: monthly push (november)

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2,15 +2,17 @@
 
 background_opacity 0.98
 font_family IosevkaTerm NF
-window_padding_width 20
+window_padding_width 24
 font_size 14
 
 allow_remote_control yes
 listen_on 
 
 foreground            #f8f8f2
-background            #161616
-color0                #161616
+# background            #161616
+# color0                #161616
+# background            #000000
+# color0                #000000
 selection_foreground  #ffffff
 selection_background  #44475a
 
