feat: slight "ui" changes

--- a/dots/tmux.theme.conf
+++ b/dots/tmux.theme.conf
@@ -1,7 +1,28 @@
+color_blue="#698DDA"
+color_black="#050505"
+color_gray="#d1d1d1"
+color_deepgray="#404040"
+
 set-option -g status-position "bottom"
+set -g status-left-length 90
+set -g status-right-length 90
 set-option -g status-style bg=default,fg=default
 set-option -g status-justify centre
-set-option -g status-left '#[bg=#363636,fg=white,bold]#{?client_prefix,,  tmux  }#[bg=#698DDA,fg=black,bold]#{?client_prefix,  tmux  ,}#[bg=black,fg=white,bold] -> @#S '
-set-option -g status-right '#[bg=#363636,fg=white,bold] CPU:#{cpu_percentage} #[bg=#464646,fg=default,bold]#{pomodoro_status}#[bg=red,fg=black,bold] #(whoami) '
-set-option -g window-status-format ' #I:#W '
-set-option -g window-status-current-format '#[bg=#000000,fg=#698DDA] ./#I:#W#{?window_zoomed_flag,  , }'
+
+ set -g pane-border-style fg=$color_deepgray
+ set -g pane-active-border-style fg=$color_gray
+
+set-option -g status-left "#[bg=$color_blue,fg=black,bold]#{?client_prefix,,  tmux  }#[bg=blue,fg=black,bold]#{?client_prefix,  tmux  ,}#[bg=black,fg=white,bold] -> @#S "
+set-option -g status-right "#[bg=$color_black,fg=white,bold] CPU:#{cpu_percentage} #[bg=$color_black,fg=default,bold]#{pomodoro_status} #[bg=$color_blue,fg=black,bold] #(whoami) "
+
+set-option -g window-status-separator "   "
+set-option -g window-status-format "#[fg=$color_deepgray,italics]#I: #[noitalics]#W"
+set-option -g window-status-current-format "#[fg=$color_blue,italics]#I: #[fg=$color_gray,noitalics,bold]#W"
+
+# tmux-pomodoro
+set -g @pomodoro_on "  #[fg=red] "
+set -g @pomodoro_complete "  #[fg=green] "
+set -g @pomodoro_pause "  #[fg=yellow] "
+set -g @pomodoro_prompt_break "  #[fg=green] ?"
+set -g @pomodoro_prompt_pomodoro "  #[fg=red] ?"
+set -g @pomodoro_interval_display "#[fg=$color_deepgray]|#[fg=italics]%s"
