--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # config
 
 background_opacity 0.98
-font_family IosevkaTerm NF
+font_family JetBrainsMono Nerd Font
 window_padding_width 24
-font_size 12
+font_size 10
 
 allow_remote_control yes
 listen_on 
