feat: let's hope i didnt commit any private keys

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,18 +1,19 @@
 # config
 
 background_opacity 0.98
-font_family JetBrainsMono Nerd Font
+font_family Iosevka Nerd Font
 window_padding_width 12
 font_size 12
 
-allow_remote_control yes
-listen_on 
+# allow_remote_control yes
+# listen_on 
+enable_audio_bell no
 
 foreground            #f8f8f2
 # background            #161616
 # color0                #161616
-# background            #000000
-# color0                #000000
+background            #000000
+color0                #000000
 selection_foreground  #ffffff
 selection_background  #44475a
 
