--- a/dots/tmux.conf
+++ b/dots/tmux.conf
@@ -1,7 +1,7 @@
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -11,8 +11,8 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 
 # automatic restore
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @continuum-boot 'on'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 
 # change prefix
